[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renderstream"
version = "1.29.0"
authors = [
  { name="Disguise Technologies", email="info@disguise.one" },
]
description = "Python bindings to disguise RenderStream C API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
"Homepage" = "https://github.com/disguise-one/RenderStream-py"
"Bug Tracker" = "https://github.com/disguise-one/RenderStream-py/issues"